--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta name="twitter:image:alt" content="Ryma Oussedik">
     <title>Ryma Oussedik. | Personal Website</title>
-    <link rel="icon" href="assets/img/favicon.ico">
+    <!-- <link rel="icon" href="assets/img/favicon.ico"> -->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -42,15 +42,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-xs-12 align-center info">
-                    <img id="picture" src="assets/img/ryma.jpg" alt="Ryma Oussedik" />
+                    <!-- <img id="picture" src="assets/img/ryma.jpg" alt="Ryma Oussedik" /> -->
                 </div>
                 <div class="col-lg-4 col-xs-12 align-right info">
                     <h5>ry.oussedik@gmail.com <img class="in-pic" src="assets/img/mail.png" alt="email"/></h5>
-                    <h5>+213561674678 <img class="in-pic" src="assets/img/phone.png" alt="tel"/></h5>
+                    <h5>+213555161965 <img class="in-pic" src="assets/img/phone.png" alt="tel"/></h5>
                     <h5>Alger, Algérie <img class="in-pic" src="assets/img/location.png" alt="location"/></h5>
-                    <a target="_blank" href="https://www.linkedin.com/in/ryma-oussedik">
+                    <!-- <a target="_blank" href="https://www.linkedin.com/in/ryma-oussedik">
                      <h5>ryma-oussedik<img class="in-pic" src="assets/img/in.png" alt="github"/></h5>
-                    </a>
+                    </a> -->
                 </div>
         </div>
     </section>
@@ -60,7 +60,25 @@
                 <div class="activity-type">
                     <h2 class="type">Éxperiences</h2> 
                     <div class="activity">
-                        <div class="col-lg-6 col-xs-6 align-left column-small info">05/2018 - présent</div>
+                        <div class="col-lg-6 col-xs-6 align-left column-small info">01/2019 - présent</div>
+                        <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
+                        <h3 class="title">Responsable marketing des produits technologiques</h3> 
+                        <a target="_blank" href="http://djezzy.dz/">
+                        <h4 class="institution">Agence Nationale de Promotion et de Développement des Parcs Technologiques</h4>
+                        </a>
+                        <ul class="tasks">
+                            <li><span>.</span> Mise en place de la strategie marketing ciblée liée aux produits et services technologiques.</li>
+                            <!-- <li><span>.</span> mise en place d'un plan marketing ciblé .</li> -->
+                            <li><span>.</span> Vulgarisation des produits et services technologiques.</li>
+                            <li><span>.</span> Coordination des projets digitaux.</li>
+                            <li><span>.</span> Animation, en collaboration avec l'équipe communication, les communautés sociales de l'agence.</li>
+                            <li><span>.</span> Reporting et analyse des indicateurs de performance .</li>
+                            <li><span>.</span> Veille concurrentielle.</li>
+                            <li><span>.</span> Élaboration d'une base de données clients potentiels/ clients à cibler.</li>
+                        </ul>
+                    </div>
+                    <div class="activity">
+                        <div class="col-lg-6 col-xs-6 align-left column-small info">05/2018 - 12/2018</div>
                         <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
                         <h3 class="title">Media Executive</h3> 
                         <a target="_blank" href="http://djezzy.dz/">
@@ -101,7 +119,7 @@
                         <h4 class="institution">Crowd Mobile</h4>
                         </a>
                         <ul class="tasks">
-                            <li><span>.</span> Répondre aux messages entrants de manière amusante et créative et concevez des messages publicitaires mobiles.</li>
+                            <li><span>.</span> Répondre aux messages entrants de manière amusante et créative et concevoir des messages publicitaires mobiles.</li>
                         </ul>
                     </div>
                 </div>
@@ -148,15 +166,7 @@
                             <span class="lang">Arabe</span>
                         </div>
                     </div>
-                </div>
-                <div class="activity-type">
-                    <h2 class="type">Centres d'intérêts</h2> 
-                    <div class="activity">
-                        <p>
-                            Peinture <span>|</span> Bénévolat <span>|</span> Digital <span>|</span> Publicité <span>|</span> Media contemporains <span>|</span> Communication <span>|</span> Gestion de projet et évènement <span>|</span> Sport <span>|</span> Lecture <span>|</span>Solutions Innovantes
-                        </p>
-                    </div>
-                </div>         
+                </div>     
             </div>
             <div class="col-lg-6 col-xs-12 align-left column">
                 <div class="activity-type">
@@ -267,6 +277,14 @@
                         </a>
                     </div> -->
                 </div> 
+                <div class="activity-type">
+                    <h2 class="type">Centres d'intérêts</h2> 
+                    <div class="activity">
+                        <p>
+                            Peinture <span>|</span> Bénévolat <span>|</span> Digital <span>|</span> Publicité <span>|</span> Media contemporains <span>|</span> Communication <span>|</span> Gestion de projet et évènement <span>|</span> Sport <span>|</span> Lecture <span>|</span>Solutions Innovantes
+                        </p>
+                    </div>
+                </div>    
             </div>
         </div>
     </section>
