--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta name="twitter:image:alt" content="Ryma Oussedik">
     <title>Ryma Oussedik. | Personal Website</title>
-    <!-- <link rel="icon" href="assets/img/favicon.ico"> -->
+    <link rel="icon" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -42,15 +42,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-xs-12 align-center info">
-                    <!-- <img id="picture" src="assets/img/ryma.jpg" alt="Ryma Oussedik" /> -->
+                    <img id="picture" src="assets/img/ryma.jpg" alt="Ryma Oussedik" />
                 </div>
                 <div class="col-lg-4 col-xs-12 align-right info">
                     <h5>ry.oussedik@gmail.com <img class="in-pic" src="assets/img/mail.png" alt="email"/></h5>
                     <h5>+213555161965 <img class="in-pic" src="assets/img/phone.png" alt="tel"/></h5>
                     <h5>Alger, Algérie <img class="in-pic" src="assets/img/location.png" alt="location"/></h5>
-                    <!-- <a target="_blank" href="https://www.linkedin.com/in/ryma-oussedik">
+                    <a target="_blank" href="https://www.linkedin.com/in/ryma-oussedik">
                      <h5>ryma-oussedik<img class="in-pic" src="assets/img/in.png" alt="github"/></h5>
-                    </a> -->
+                    </a>
                 </div>
         </div>
     </section>
@@ -71,7 +71,7 @@
                             <!-- <li><span>.</span> mise en place d'un plan marketing ciblé .</li> -->
                             <li><span>.</span> Vulgarisation des produits et services technologiques.</li>
                             <li><span>.</span> Coordination des projets digitaux.</li>
-                            <li><span>.</span> Animation, en collaboration avec l'équipe communication, les communautés sociales de l'agence.</li>
+                            <li><span>.</span> Animation, en collaboration avec l'équipe communication, des communautés sociales de l'agence.</li>
                             <li><span>.</span> Reporting et analyse des indicateurs de performance .</li>
                             <li><span>.</span> Veille concurrentielle.</li>
                             <li><span>.</span> Élaboration d'une base de données clients potentiels/ clients à cibler.</li>
